<resources>
    <string name="app_name">Code School Homework</string>

    <!-- Global-->
    <string name="global_enter_player_name">Enter Player Names</string>
    <string name="global_games">Games</string>
    <string name="global_apps">Apps</string>
    <string name="global_for_you">For you</string>
    <string name="global_top_charts">Top Charts</string>
    <string name="global_kids">Kids</string>
    <string name="global_categories">Categories</string>
    <string name="global_name">name</string>
    <string name="global_rating">rating</string>
    <string name="global_memory_size">memory size</string>
    <string name="global_top_free">top free</string>
    <string name="global_number">number</string>
    <string name="global_browse_by_age">Browse by age</string>
    <string name="global_ages_up_to_5">Ages up to 5</string>
    <string name="global_ages_6_8">Ages 6–8</string>


    <!-- End Global-->

    <string name="no_internet_connection">No Internet Connection</string>

    <!-- Calculator-->
    <string name="c">C</string>
    <string name="percent">%</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="coma">,</string>
    <string name="equals">=</string>
    <string name="calculator">Calculator</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>


    <!-- TicTacToe-->
    <string name="enter_player_name">@string/global_enter_player_name</string>
    <string name="player_one">Player One</string>
    <string name="player_two">Player Two</string>
    <string name="start_game">START GAME</string>
    <string name="replay">Replay</string>
    <string name="show_score">show score</string>
    <string name="change_names">change Names</string>
    <string name="exit">exit</string>
    <string name="message_here">Message Here</string>
    <string name="score_0">score 0</string>
    <string name="click_the_button_to_share_info">click the button to share info</string>
    <string name="show_more">show more</string>
    <string name="get_date">get Date</string>
    <string name="get_time">get time</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="data_me">Data me.</string>
    <string name="know_yourself_better">Know yourself better</string>
    <string name="type_here">Type here…</string>
    <string name="password">Password</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="name_or_pseudo">Name or pseudo</string>
    <string name="confirm_password">Confirm password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--End TicTacToe-->


    <!-- Play Market-->
    <string name="games">@string/global_games</string>
    <string name="apps">@string/global_apps</string>
    <string name="for_you">@string/global_for_you</string>
    <string name="kids">@string/global_kids</string>
    <string name="top_charts">@string/global_top_charts</string>
    <string name="categories">@string/global_categories</string>
    <string name="name">@string/global_name</string>
    <string name="rating">@string/global_rating</string>
    <string name="memory_size">@string/global_memory_size</string>
    <string name="top_free">@string/global_top_free</string>
    <string name="number">@string/global_number</string>
    <string name="browse_by_age">@string/global_browse_by_age</string>
    <string name="ages_up_to_5">@string/global_ages_up_to_5</string>
    <string name="ages_6_8">@string/global_ages_6_8</string>
    <string name="search">search</string>
    <string name="favorite_news">Favorite News</string>
    <string name="news">News</string>

    <!-- End Play Market-->

</resources>