<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvWriting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16"
        android:layout_marginTop="@dimen/_36"
        android:layout_marginEnd="@dimen/_16"
        android:background="@color/white"
        android:lines="2"
        android:maxLines="2"
        android:text="test"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16"
        android:layout_marginEnd="@dimen/_16"
        android:background="@color/white"
        android:lines="1"
        android:maxLines="1"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWriting" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnC"
        style="@style/ActionButtonStyle"
        android:layout_marginHorizontal="@dimen/_8"
        android:background="@drawable/rounded_button_black"
        android:text="@string/c"
        app:layout_constraintBottom_toTopOf="@id/btn7"
        app:layout_constraintLeft_toLeftOf="@id/tvResult"
        app:layout_constraintRight_toLeftOf="@id/btnPercent"
        app:layout_constraintTop_toBottomOf="@id/tvResult" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPercent"
        style="@style/ActionButtonStyle2"
        android:background="@drawable/rounded_button_black"
        android:text="@string/percent"
        app:layout_constraintBottom_toBottomOf="@id/btnC"
        app:layout_constraintLeft_toRightOf="@id/btnC"
        app:layout_constraintRight_toLeftOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="@id/btnC" />

    <ImageButton
        android:id="@+id/btnBack"
        style="@style/ActionButtonStyle2"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_8"
        android:background="@drawable/rounded_button_black"
        android:src="@drawable/ic_baseline_backspace_24"
        app:layout_constraintBottom_toBottomOf="@id/btnPercent"
        app:layout_constraintLeft_toRightOf="@id/btnPercent"
        app:layout_constraintRight_toLeftOf="@id/btnDivide"
        app:layout_constraintTop_toTopOf="@id/btnPercent"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDivide"
        style="@style/ActionButtonStyle"
        android:layout_marginTop="@dimen/_16"
        android:background="@drawable/rounded_button_black"
        android:text="@string/divide"
        app:layout_constraintBottom_toTopOf="@id/btnMultiply"
        app:layout_constraintLeft_toRightOf="@id/btnBack"
        app:layout_constraintRight_toRightOf="@id/tvResult"
        app:layout_constraintTop_toBottomOf="@id/tvResult" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn7"
        style="@style/NumberButtonStyle"
        android:background="@drawable/roundedbuttonwhite"
        android:text="@string/_7"
        app:layout_constraintLeft_toLeftOf="@id/btnC"
        app:layout_constraintRight_toRightOf="@id/btnC"
        app:layout_constraintTop_toBottomOf="@id/btnC" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn8"
        style="@style/NumberButtonStyle"
        android:background="@drawable/roundedbuttonwhite"
        android:text="@string/_8"
        app:layout_constraintLeft_toLeftOf="@id/btnPercent"
        app:layout_constraintRight_toRightOf="@id/btnPercent"
        app:layout_constraintTop_toBottomOf="@id/btnPercent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn9"
        style="@style/NumberButtonStyle"
        android:background="@drawable/roundedbuttonwhite"
        android:text="@string/_9"
        app:layout_constraintLeft_toLeftOf="@id/btnBack"
        app:layout_constraintRight_toRightOf="@id/btnBack"
        app:layout_constraintTop_toBottomOf="@id/btnBack"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMultiply"
        style="@style/ActionButtonStyle"
        android:background="@drawable/rounded_button_black"
        android:padding="@dimen/_16"
        android:text="@string/multiply"
        app:layout_constraintLeft_toLeftOf="@id/btnDivide"
        app:layout_constraintRight_toRightOf="@id/btnDivide"
        app:layout_constraintTop_toBottomOf="@id/btnDivide" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn4"
        style="@style/NumberButtonStyle"
        android:background="@drawable/roundedbuttonwhite"
        android:text="@string/_4"
        app:layout_constraintLeft_toLeftOf="@id/btn7"
        app:layout_constraintRight_toRightOf="@id/btn7"
        app:layout_constraintTop_toBottomOf="@id/btn7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn5"
        style="@style/NumberButtonStyle"
        android:background="@drawable/roundedbuttonwhite"
        android:text="@string/_5"
        app:layout_constraintLeft_toLeftOf="@id/btn8"
        app:layout_constraintRight_toRightOf="@id/btn8"
        app:layout_constraintTop_toBottomOf="@id/btn8"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn6"
        style="@style/NumberButtonStyle"
        android:background="@drawable/roundedbuttonwhite"
        android:text="@string/_6"
        app:layout_constraintLeft_toLeftOf="@id/btn9"
        app:layout_constraintRight_toRightOf="@id/btn9"
        app:layout_constraintTop_toBottomOf="@id/btn9"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMinus"
        style="@style/ActionButtonStyle"
        android:background="@drawable/rounded_button_black"
        android:padding="@dimen/_16"
        android:text="@string/minus"
        app:layout_constraintLeft_toLeftOf="@id/btnMultiply"
        app:layout_constraintRight_toRightOf="@id/btnMultiply"
        app:layout_constraintTop_toBottomOf="@id/btnMultiply" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn1"
        style="@style/NumberButtonStyle"
        android:background="@drawable/roundedbuttonwhite"
        android:text="@string/_1"
        app:layout_constraintLeft_toLeftOf="@id/btn4"
        app:layout_constraintRight_toRightOf="@id/btn4"
        app:layout_constraintTop_toBottomOf="@id/btn4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn2"
        style="@style/NumberButtonStyle"
        android:background="@drawable/roundedbuttonwhite"
        android:text="@string/_2"
        app:layout_constraintLeft_toLeftOf="@id/btn5"
        app:layout_constraintRight_toRightOf="@id/btn5"
        app:layout_constraintTop_toBottomOf="@id/btn5"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn3"
        style="@style/NumberButtonStyle"
        android:background="@drawable/roundedbuttonwhite"
        android:text="@string/_3"
        app:layout_constraintLeft_toLeftOf="@id/btn6"
        app:layout_constraintRight_toRightOf="@id/btn6"
        app:layout_constraintTop_toBottomOf="@id/btn6"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPlus"
        style="@style/ActionButtonStyle"
        android:background="@drawable/rounded_button_black"
        android:text="@string/plus"
        app:layout_constraintLeft_toLeftOf="@id/btnMinus"
        app:layout_constraintLeft_toRightOf="@id/btn3"
        app:layout_constraintRight_toRightOf="@id/btnMinus"
        app:layout_constraintTop_toBottomOf="@id/btnMinus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn0"
        style="@style/NumberButtonStyle"
        android:background="@drawable/roundedbuttonwhite"
        android:text="@string/_0"
        app:layout_constraintLeft_toLeftOf="@id/btn1"
        app:layout_constraintRight_toRightOf="@id/btn1"
        app:layout_constraintTop_toBottomOf="@id/btn1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnComa"
        style="@style/NumberButtonStyle"
        android:background="@drawable/roundedbuttonwhite"
        android:text="@string/coma"
        app:layout_constraintLeft_toLeftOf="@id/btn2"
        app:layout_constraintRight_toRightOf="@id/btn2"
        app:layout_constraintTop_toBottomOf="@id/btn2"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEquals"
        style="@style/ActionButtonStyle"
        android:layout_width="0dp"
        android:background="@drawable/rounded_button_black"
        android:text="@string/equals"
        app:layout_constraintLeft_toLeftOf="@id/btn3"
        app:layout_constraintRight_toRightOf="@id/btnPlus"
        app:layout_constraintTop_toBottomOf="@id/btnPlus" />

</androidx.constraintlayout.widget.ConstraintLayout>