<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_registration.LoginOrRegistrationActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/graphicImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/graphic"
        app:layout_constraintBottom_toBottomOf="@id/dataMeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dataMeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:text="@string/data_me"
        android:textColor="@color/signInButtonBorderColor"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/knowYourselfTextView"
        app:layout_constraintEnd_toEndOf="@+id/knowYourselfTextView"
        app:layout_constraintStart_toStartOf="@+id/knowYourselfTextView"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/knowYourselfTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_50"
        android:text="@string/know_yourself_better"
        android:textColor="@color/signInButtonBorderColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/thirdLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <View
        android:id="@+id/thirdLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0"
        android:layout_marginTop="-80dp"
        android:background="@drawable/third_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/secondLogin" />

    <View
        android:id="@+id/secondLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0"
        android:layout_marginTop="-80dp"
        android:background="@drawable/second_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainLogin" />

    <View
        android:id="@+id/mainLogin"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/main_login"
        app:layout_constraintBottom_toBottomOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logInButton"
        android:layout_width="@dimen/_0"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_16"
        android:background="@drawable/login_round_button"
        android:paddingHorizontal="@dimen/_36"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/signUpButton"
        app:layout_constraintEnd_toEndOf="@id/signUpButton"
        app:layout_constraintStart_toStartOf="@id/signUpButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_36"
        android:background="@drawable/signup_round_button"
        android:paddingHorizontal="@dimen/_36"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/signInButtonBorderColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>